<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFF8DC"
    android:id="@+id/constraint"
    tools:context=".Fragment.MakeReservation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#FFF8DC"
        tools:context=".Fragment.MakeReservation"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="8dp">

        <TextView
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:text="@string/make_reservation"
            android:textColor="#000000"
            android:layout_marginTop="14dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/title_text"></TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            app:layout_constraintBottom_toTopOf="@id/tf_bookingDate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:maxHeight="150dp"
            android:maxWidth="150dp"
            android:src="@drawable/logo"
            android:adjustViewBounds="true"
            android:id="@+id/logoImage"
            ></ImageView>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_bookingDate"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/booking_date"
            app:hintTextColor="#000000"
            app:errorEnabled="true"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidth="2dp"
            android:textColorHint="#000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="#000000"
            android:padding="0dp"
            android:layout_margin="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:inputType="date"
                android:enabled="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#228B22"
            android:text="Select Date"
            android:textColor="#FFFFFF"
            android:id="@+id/btn_selectDate"
            app:layout_constraintTop_toBottomOf="@id/tf_bookingDate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            ></Button>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_number_of_pax"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_number_of_pax"
            app:hintTextColor="#000000"
            app:errorEnabled="true"
            app:boxStrokeColor="#000000"
            app:boxStrokeWidth="2dp"
            android:textColorHint="#000000"
            app:layout_constraintTop_toBottomOf="@id/btn_selectDate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnConfirmPax"
            android:textColor="#000000"
            android:padding="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            app:layout_constraintTop_toBottomOf="@id/tf_number_of_pax"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/number_of_pax_warning"
            android:textColor="#000000"
            android:id="@+id/number_of_pax_warning"
            ></TextView>

        <Button
            android:id="@+id/btnConfirmPax"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:text="Continue"
            android:textColor="#FFFFFF"
            android:backgroundTint="#228B22"
            app:layout_constraintTop_toBottomOf="@id/number_of_pax_warning"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="0dp"
            android:padding="0dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>